k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.org/websocket-services: "yummo-socket"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/(.*)
        pathType: Prefix
        backend:
          service:
            name: yummo-be
            port:
              number: 8091
      - path: /socket/(.*)
        pathType: Prefix
        backend:
          service:
            name: yummo-socket
            port:
              number: 5001
      - path: /(socket.io/.*)
        pathType: Prefix
        backend:
          service:
            name: yummo-socket
            port:
              number: 5001
      - path: /nginx-fe/(.*)
        pathType: Prefix
        backend:
          service:
            name: hello
            port:
              number: 80
